[package]
name = "outside-auras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.0"
eframe = "0.22"
env_logger = "0.10"
chrono = "0.4"
image = "0.24"
crossbeam = "0.8"
parking_lot = "0.12"
lazy_static = "1.4"
procspawn = "0.10"
ipc-channel = "0.16"
serde = "1.0"